0.90 ------ Europe/Moscow
    [CHANGES]
    * New inner control flow

0.83 2022-05-06 23:45:23 Europe/Moscow
    [CHANGES]
    * Add meta.json with dzill

    [DOCS]
    * Typos

0.82 2022-05-05 18:27:52 Europe/Moscow
    [IMPROVEMENTS]
    * Add use strict, warnings
    * Add comments for some private methods
    * Code style

    [DOCS]
    * Typos
    * Hints

0.81 2022-05-04 13:47:31 Europe/Moscow
    [CHANGES]
    * Turn off redundant sprintf warnings

    [IMPROVEMENTS]
    * Code style

    [DOCS]
    * Validator Signatures
    * Typos
    * Style

0.80 2022-04-25 20:58:04 Europe/Moscow
    [CHANGES]
    * No memoization for validators

    [IMPROVEMENTS]
    * Refactoring
    * Moved Plugin login to Validator class
    * More tests

    [DOCS]
    * Validators docs
    * Configuration docs

0.71 2022-04-22 19:40:42 Europe/Moscow
    [IMPROVEMENTS]
    * Unsetting $valid_input after first access

    [DOCS]
    * Document validators
    * Profile method
    * Screenshot
    * Fix typos

0.70 2022-04-22 18:01:46 Europe/Moscow
    [CHANGES]
    * Validate signature. Now accepting arguments as hash

    [FEATURES]
    * New dsl keyword: validated

    [REMOVED]
    * validator_language

    [DOCS]
    * Update docs

0.61 2022-04-12 14:38:13 Europe/Moscow
    [IMPROVEMENTS]
    * Refactored field defined and not empty

0.60 2022-04-12 12:59:01 Europe/Moscow
    [CHANGES]
    * Removed validate_form dsl
    * Removed config form => profile association
    * Add validate dsl

    [DOCS]
    * Update docs

0.51 2022-04-11 19:41:41 Europe/Moscow
    [CHANGES]
    * Now validated defined and not empty fields

    [DOCS]
    * Extensions
    * Some validators

0.50 2022-04-06 15:30:45 Europe/Moscow
    [CHANGES]
    * Change ProfileHasMessages message struct

    [DOCS]
    * Profile custom messages

0.40 2022-04-06 12:29:59 Europe/Moscow
    [CHANGES]
    * Passing extension to its validator constructor

0.31 2022-04-06 11:15:15 Europe/Moscow
    [IMPROVEMENTS]