@@ -1,6 +1,7 @@
 0.90 ------ Europe/Moscow
     [CHANGES]
     * New inner control flow
+    * Unit tests: input, validator, messages
 
 0.83 2022-05-06 23:45:23 Europe/Moscow
     [CHANGES]
